# mechapen_ros_ws

./: .gitignore  CONTRIBUTING.MD  README.md
src/mechapen_core/: CMAKELISTS.txt  Cargo.toml  package.xml
src/mechapen_core/src/: actuators.rs  ai_core.rs  gait_control.rs  kinematics.rs  main.rs  sensors.rs  writing_engine.rs
src/mechapen_description/: CMakeLists.txt  package.xml
src/mechapen_description/launch/: display_leg.launch
src/mechapen_description/urdf/: mechapen_leg.urdf
