<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mechapen_core</name>
  <version>0.0.1</version>
  <description>The core control software for the MechaPen robot.</description>
  <maintainer email="dillon.carey030@gmail.com">Dillon Carey</maintainer>
  <license>Apache-2.0</license> <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>